webpage structure created with sections, footer and header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,44 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 
-<body>
+<header>
     <h1>Teemo's Conference</h1>
-    <p>Lorem ipsum dolor sit amet. Sed dolores sint id reprehenderit deserunt est quae amet id accusantium exercitationem. Ea illum repellat eum minus quia qui quam quibusdam</p>
+    <h3>November 13&ndash;13th &mdash; Sao Paulo, BR</h3>
+    
+</header>
+
+<section>
+    <h2>Dedicted to the biggest party of dogs that ever happend</h2>
+    <p>Ut autem nostrum et dignissimos debitis est quae nesciunt non ipsum consequuntur</p>
+</section>
+
+<section>
+
+    <section>
+        <h5>Speakers</h5>
+        <h3>World-Class Speakers</h3>
+        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+    </section>
+
+    <section>
+        <h5>Schedules</h5>
+        <h3>Three Inspiring Days</h3>
+        <p>Ab omnis aliquid ut enim dicta ut obcaecati laudantium!</p>
+    </section>
+
+    <section>
+        <h5>Venues</h5>
+        <h3> The nearest Petshop</h3>
+    </section>
+    
+</section>
+
+<body>
 
 </body>
 
+<footer>
+    <small>&copy; Teemo Conference</small>
+  </footer>
 
 </html>
