editing the webpages text

--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
 
         <h1>Register</h1>
 
-        <p>Every year we aim to have an unbelievable time, and this year we&#8217;d love it for you to join us. Conference passes only cost $99, one of the best values you&#8217;ll find.</p>
+        <p>Ut minus magni in sequi assumenda sed nesciunt enim est pariatur quibusdam eum nostrum exercitationem!</p>
 
       </div>
     </section>
