--- a/speakers.html
+++ b/speakers.html
@@ -37,7 +37,7 @@
 
         <h1>Speakers</h1>
 
-        <p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p>
+        <p>Et maxime incidunt qui quasi eligendi sed sequi tempore. Est ullam obcaecati est voluptatum officia qui sunt iusto.</p>
 
       </div>
     </section>
