--- a/schedule.html
+++ b/schedule.html
@@ -37,7 +37,7 @@
 
         <h1>Schedule</h1>
 
-        <p>The conference opens with amazing workshops and continues with two days of incredible talks and keynotes, all of which are facilitated by industry-leading experts.</p>
+        <p>Nam quaerat vitae ut quia minus aut eaque cumque in magnam repellendus ad rerum tenetur non deleniti minus!</p>
 
       </div>
     </section>
