--- a/venue.html
+++ b/venue.html
@@ -37,7 +37,7 @@
 
         <h1>Venue</h1>
 
-        <p>The conference is held at The Chicago Theatre, a beautiful historical landmark. The conference hotel, Hotel Chicago, is a short walk away down State Street.</p>
+        <p>Nam officia omnis quo rerum iure ab accusamus soluta. Sed suscipit tempora quo quia laudantium est quas repellat</p>
 
       </div>
     </section>
