--- a/venue.html
+++ b/venue.html
@@ -15,7 +15,7 @@
     <header class="primary-header container group">
 
       <h1 class="logo">
-        <a href="index.html">Styles <br> Conference</a>
+        <a href="index.html">Teemo's <br> Conference</a>
       </h1>
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
@@ -46,7 +46,7 @@
 
     <footer class="primary-footer container group">
 
-      <small>&copy; Styles Conference</small>
+      <small>&copy; Teemo's Conference</small>
 
       <nav class="nav">
         <a href="index.html">Home</a>
